# fpna-intelligence-copilot

./: .gitignore
backend/: pyproject.toml
backend/src/fpna_copilot/: api.py  column_rules.py  copilotkit_agent.py  ct_engine.py  models.py  utils.py
backend/src/fpna_copilot/finance_engine/: copilot_service.py  sqlite_metrics.py
backend/src/fpna_copilot/graph/: ai_planner_graph.py
backend/src/fpna_copilot/ingestion/: ct_sqlite_loader.py
backend/src/fpna_copilot/planners/: deterministic_planner.py
backend/src/fpna_copilot/store/: sqlite_store.py
backend/src/fpna_copilot/tools/: finance_tools.py
backend/src/fpna_copilot/ui_spec/: ui_spec_builder.py
data/: fpna_copilot.db
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/components/finance/: FinanceResultView.tsx
