[project]
name = "fpna-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "YuukiKibum", email = "yuukikibum@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ag-ui-langgraph[fastapi]>=0.0.42",
    "copilotkit>=0.1.94",
    "fastapi>=0.138.1",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "uvicorn>=0.49.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
